# property

./: .env.example  .env.test  .gitignore  01_Home.py  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  api_response_sample.json  app.py  attempt.py  calcdist.py  catchup.py  check_all.py  check_database_db.py  check_db.py  check_sold.py  clear_database.py  config.py  createdb.py  dao.py  data.db  database copy.db  database.db  database.db-journal  database.db.backup  database2.db  find_river.py  first_observed.json  first_observed.json.backup  flask_map.py  google_api.json  location_data.db  logging.txt  main.py  makeit.py  migrate_add_review.py  poi_service.py  pyproject.toml  radius_database copy 2.db  (+14 more)
.github/workflows/: ci.yaml  main.yml
.ipynb_checkpoints/: Untitled2-checkpoint.ipynb
data/boundaries/: ITA_coastline.json
italian_property_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
main/: map_2.html  mapit.py  test.py  test_shapely.py
pages/: 01_Filter Series.py  01_Map view.py  02_Details.py  03_Hyperlink.py  04_aggrid.py  05_Coast_Map.py
property_tracker/config/: settings.py
property_tracker/database/: connection.py
property_tracker/database/migrations/: migrate_add_interactions.py
property_tracker/models/: property.py
property_tracker/services/: poi.py  review.py  translation.py
property_tracker/utils/: distance.py
static/: map.html  map_backup.html  new_map.html
templates/: index.html  map.html
test_pytest/: test_db.py
tests/: conftest.py  test_db.py  test_item.json  tests.py
tests/fixtures/: mock_api_responses.json  sample_properties.json
tests/integration/: test_review_workflow.py
tests/unit/: test_database.py  test_models.py  test_services.py  test_utils.py
ui/: app.py
ui/components/: review_buttons.py
ui/pages/: 01_Filter_Series.py  02_Details.py  03_Hyperlink.py  04_Aggrid.py  05_Coast_Map.py
utils/: calcdist.py  check_all.py  check_database_db.py  check_db.py  check_sold.py  clear_database.py  find_river.py  migrate_add_interactions.py  migrate_add_province_city.py  migrate_add_review.py  migrate_normalize_prices.py  test_db.py
